--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -32,7 +32,7 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: mysql://root:B-hDD1Ce23DFAb4CCacfBee5CEDHg135@mysql.railway.internal:3306/railway #jdbc:mysql://localhost:3306/tooth?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
+    url: jdbc:mysql://root:B-hDD1Ce23DFAb4CCacfBee5CEDHg135@mysql.railway.internal:3306/railway #jdbc:mysql://localhost:3306/tooth?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
     username: root
     password: B-hDD1Ce23DFAb4CCacfBee5CEDHg135
     hikari:
