--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -32,7 +32,7 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://root:B22DDcGg6dAAa1GhF55fG1cAha4E34g6@mysql.railway.internal:3306/railway #jdbc:mysql://localhost:3306/tooth?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
+    url: jdbc:mysql://root:B22DDcGg6dAAa1GhF55fG1cAha4E34g6@roundhouse.proxy.rlwy.net:42649/railway?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true #jdbc:mysql://localhost:3306/tooth?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
     username: root
     password: B22DDcGg6dAAa1GhF55fG1cAha4E34g6
     hikari:
